# atsam4e16e-pac

./: .travis.yml  Cargo.toml  README.md  update.sh
ci/: install.sh  script.sh
src/: lib.rs
src/supc/: cr.rs  mr.rs
svd/: ATSAM4E16E.svd
