[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for ATSAM4E16E microcontrollers"
documentation = "https://docs.rs/atsam4e"
keywords = ["arm", "cortex-m", "atsam4e16e", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsam4e16e-pac"
repository = "https://github.com/atsam4e_rs/atsam4e16e"
version = "0.1.0"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
